--- a/custom-theme/partials/navbar.html
+++ b/custom-theme/partials/navbar.html
@@ -1,56 +1,32 @@
-<nav class="navbar header has-shadow is-transparent is-fixed-top">
-  <div class="navbar-brand is-full">
-    <a class="navbar-item" href="/">
-      <h1 class="title">{{ config.site_name }}</h1>
-    </a>
-    
-    <a id="show-toc" class="navbar-custom-button burger is-hidden-tablet" aria-label="menu" aria-expanded="false" data-show="quickview" data-target="nav-toc">
-		<span class="icon">
-		  <i class="fas fa-list"></i>
-		</span>
-    </a>
-    
-    <a id="nav-toggle" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbar-nav">
-      <span></span>
-      <span></span>
-      <span></span>
-    </a>
-  </div>
+<nav class="navbar is-transparent">
+<div class="navbar-brand">
+<a class="navbar-item" href="/">
+<img style="margin-right: 12px; border-radius: 50%;" src="https://github.com/mineblock11.png"
+alt="Bulma: a modern CSS framework based on Flexbox" width="auto" height="28" />
+<p class="subtitle is-family-primary">mineblock11</p>
+</a>
+<div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
+<span></span>
+<span></span>
+<span></span>
+</div>
+</div>
 
-  <div id="navbar-nav" class="navbar-menu">
-    <div class="navbar-start">
-      {% for nav_item in nav %}
-        {% if nav_item.children %}
-          <div class="navbar-item has-dropdown is-hoverable">
-              <a class="navbar-link" href="{{ nav_item.url|url }}">
-                {{ nav_item.title }}
-              </a>
-              <div class="navbar-dropdown is-boxed">
-                {% for nav_item in nav_item.children %}
-                  <a class="navbar-item" href="{{ nav_item.url|url }}">
-                    {{ nav_item.title }}
-                  </a>
-                {% endfor %}
-              </div>
-          </div>
-        {% else %}
-          <a class="navbar-item" href="{{ nav_item.url|url }}">
-            {{ nav_item.title }}
-          </a>
-        {% endif %}
-      {% endfor %}
-    </div>
+<div id="navbarExampleTransparentExample" class="navbar-menu">
+<div class="navbar-start">
+ <a class="navbar-item" href="https://mineblock11.dev">Home</a>
+ <a class="navbar-item" href="/">minedocs</a>
+</div>
 
-    <div class="navbar-end">
-      <div class="navbar-item">
+<div class="navbar-end">
+    <div class="navbar-item">
         <div class="field is-grouped">
-          <p class="control">
-			<div id="nav-search" role="search" class="search">
-                <form><input type="search" placeholder="Search docs" id="mkdocs-search-query" /></form>
-            </div>
-          </p>
+            <p class="control">
+                <div id="nav-search" role="search" class="search">
+                <form>  <input type="search" placeholder="Search docs" id="mkdocs-search-query" />  </form>
+                </div>
+            </p>
         </div>
-      </div>
     </div>
-  </div>
+</div>
 </nav>
