--- a/custom-theme/partials/sidebar.html
+++ b/custom-theme/partials/sidebar.html
@@ -5,28 +5,28 @@
 	<hr>
 
 	{% if page.meta.author_name %}
-	<div class="columns is-mobile is-centered is-vcentered">
+	<div class="columns is-centered is-vcentered">
 		<div class="column is-one-fifth">
 		<img style="border-radius: 50%" src="{{ page.meta.author_img }}" alt="">
 		</div>
 		<div class="column">
 			<span class="content">Written By <strong>{{ page.meta.author_name }}</strong></span>
-			{% if page.meta.difficulty == "easy" %}
-			<span class="tag is-success">Beginner</span>
-			{% endif %}
-			{% if page.meta.difficulty == "medium" %}
-			<span class="tag is-warning">Intermediate</span>
-			{% endif %}
-			{% if page.meta.difficulty == "hard" %}
-			<span class="tag is-error">Advanced</span>
-			{% endif %}
 		</div>
 	</div>
 	{% endif %}
+
     <div class="quickview-block">
       {% for toc_item in page.toc %}
 		<p class="menu-label">
-		  {{ toc_item.title }}
+		  {{ toc_item.title }} {% if page.meta.difficulty == "easy" %}
+		  <span class="tag is-success">Beginner</span>
+		  {% endif %}
+		  {% if page.meta.difficulty == "medium" %}
+		  <span class="tag is-warning">Intermediate</span>
+		  {% endif %}
+		  {% if page.meta.difficulty == "hard" %}
+		  <span class="tag is-error">Advanced</span>
+		  {% endif %}
 		</p>
 
 		{% if toc_item.children %}
