Totem + sidebar changes

--- a/custom-theme/partials/sidebar.html
+++ b/custom-theme/partials/sidebar.html
@@ -21,10 +21,10 @@
 		  {{ toc_item.title }} {% if page.meta.difficulty == "easy" %}
 		  <span class="tag is-success">Beginner</span>
 		  {% endif %}
-		  {% if page.meta.difficulty == "medium" %}
+		  {% if page.meta.difficulty == "intermediate" %}
 		  <span class="tag is-warning">Intermediate</span>
 		  {% endif %}
-		  {% if page.meta.difficulty == "hard" %}
+		  {% if page.meta.difficulty == "advanced" %}
 		  <span class="tag is-error">Advanced</span>
 		  {% endif %}
 		</p>
