Automatically list pages on home

--- a/custom-theme/partials/sidebar.html
+++ b/custom-theme/partials/sidebar.html
@@ -18,15 +18,8 @@
     <div class="quickview-block">
       {% for toc_item in page.toc %}
 		<p class="menu-label">
-		  {{ toc_item.title }} {% if page.meta.difficulty == "easy" %}
-		  <span class="tag is-success">Beginner</span>
-		  {% endif %}
-		  {% if page.meta.difficulty == "intermediate" %}
-		  <span class="tag is-warning">Intermediate</span>
-		  {% endif %}
-		  {% if page.meta.difficulty == "advanced" %}
-		  <span class="tag is-error">Advanced</span>
-		  {% endif %}
+		  {{ toc_item.title }} 
+		  {{ diffBadge(page.meta.difficulty) }}
 		</p>
 
 		{% if toc_item.children %}
