--- a/custom-theme/partials/index.html
+++ b/custom-theme/partials/index.html
@@ -30,9 +30,26 @@
                                             <span class="content">Written By <strong>{{ page_item.page.meta.author_name }}</strong></span>
                                         </div>
                                     </div>
-                                    <div class="column">
-                                        <p class="content">{{ page_item.page.meta.description }}</p>
-                                    </div>
+                                    <p class="content">{{ page_item.page.meta.description }}</p>
+                                </a>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        </div>
+    </div>
+</section>
+
+<section class="section">
+    <div class="container">
+        <h1 class="title">Documentation</h1>
+        <p class="content">Documentation for some of my mods that have APIs.</p>
+        <div class="columns is-desktop is-multiline is-ancestor">
+            {% for page_item in pages %}
+                {% if "documentation" in page_item.url %}
+                    <div class="column is-one-third is-parent is-flex">
+                                <a href="{{ page_item.url }}" class="box notification is-child is-vertical">
+                                    <h4 class="subtitle">{{ page_item.page.title }}</h4>
+                                    <p class="content">{{ page_item.page.meta.description }}</p>
                                 </a>
                     </div>
                 {% endif %}
