--- a/custom-theme/partials/navbar.html
+++ b/custom-theme/partials/navbar.html
@@ -1,32 +1,62 @@
 <nav class="navbar is-transparent">
-<div class="navbar-brand">
-<a class="navbar-item" href="/">
-<img style="margin-right: 12px; border-radius: 50%;" src="https://github.com/11mods.png"
-alt="Bulma: a modern CSS framework based on Flexbox" width="auto" height="28" />
-<p class="subtitle is-family-primary">mineblock11</p>
-</a>
-<div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
-<span></span>
-<span></span>
-<span></span>
-</div>
-</div>
 
-<div id="navbarExampleTransparentExample" class="navbar-menu">
-<div class="navbar-start">
- <a class="navbar-item" href="https://mineblock11.dev">Home</a>
- <a class="navbar-item" href="/">minedocs</a>
-</div>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
 
-<div class="navbar-end">
-    <div class="navbar-item">
-        <div class="field is-grouped">
-            <p class="control">
-                <div id="nav-search" role="search" class="search">
-                <form>  <input type="search" placeholder="Search docs" id="mkdocs-search-query" />  </form>
-                </div>
-            </p>
+            // Get all "navbar-burger" elements
+            const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+            // Check if there are any navbar burgers
+            if ($navbarBurgers.length > 0) {
+
+                // Add a click event on each of them
+                $navbarBurgers.forEach(el => {
+                    el.addEventListener('click', () => {
+
+                        // Get the target from the "data-target" attribute
+                        const target = el.dataset.target;
+                        const $target = document.getElementById(target);
+
+                        // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+                        el.classList.toggle('is-active');
+                        $target.classList.toggle('is-active');
+
+                    });
+                });
+            }
+        });
+
+
+    </script>
+
+    <div class="navbar-brand">
+        <a class="navbar-item" href="/">
+            <img style="margin-right: 12px; border-radius: 50%;" src="https://github.com/11mods.png"
+                alt="Bulma: a modern CSS framework based on Flexbox" width="auto" height="28" />
+            <p class="subtitle is-family-primary">mineblock11</p>
+        </a>
+        <div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
     </div>
-</div>
+
+    <div id="navbarExampleTransparentExample" class="navbar-menu">
+        <div class="navbar-start">
+            <a class="navbar-item" href="https://mineblock11.dev">Home</a>
+            <a class="navbar-item" href="/">minedocs</a>
+        </div>
+
+        <div class="navbar-end">
+            <div class="navbar-item">
+                <div class="field is-grouped">
+                    <p class="control">
+                    <div id="nav-search" role="search" class="search">
+                        <form> <input type="search" placeholder="Search docs" id="mkdocs-search-query" /> </form>
+                    </div>
+                    </p>
+                </div>
+            </div>
+        </div>
 </nav>
